--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "esModuleInterop": true,
     "target": "ESNext"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "interfaces/**/*.ts"]
 }
