--- a/data/toolMappings.json
+++ b/data/toolMappings.json
@@ -14,6 +14,10 @@
     ],
     "scripts": ["lint"]
   },
+  "editorconfig": {
+    "dependencies": [],
+    "scripts": []
+  },
   "typescript": {
     "dependencies": [
       "typescript",
