fix(data): cria ref a eslint no toolMapping de lint-staged

--- a/data/toolMappings.json
+++ b/data/toolMappings.json
@@ -37,7 +37,7 @@
     "scripts": []
   },
   "lint-staged": {
-    "dependencies": ["lint-staged", "husky"],
+    "dependencies": ["lint-staged", "eslint", "husky"],
     "scripts": [],
     "config": {
       "*.{js,ts}": ["prettier --write", "eslint --fix"]
