--- a/package.json
+++ b/package.json
@@ -44,6 +44,12 @@
     "prepare": "husky install",
     "lint": "eslint .",
     "dev": "tsx ./src/cli.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   }
 }
