--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint .",
-    "dev": "tsx ./src/cli.ts",
+    "cli": "tsx ./src/cli.ts",
     "build": "tsc",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "clear && node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
+    "jest-esm-transformer": "^1.0.0",
     "ts-jest": "^29.2.5"
   }
 }
