chore(config): altera configurações do eslint

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint .",
+    "fix": "eslint . --fix",
     "cli": "tsx ./src/cli.ts",
     "build": "tsc",
     "test": "clear && node --experimental-vm-modules node_modules/jest/bin/jest.js"
