--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 
     "paths": {
       "@utils/*": ["./utils/*"],
-      "@interfaces/*": ["./interfaces/*"]
+      "@interfaces/*": ["./interfaces/*"],
+      "@data/*": ["./data/*"]
     },
     "outDir": "./dist",
     "esModuleInterop": true,
