--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
     "tsx": "^4.19.2"
+    "winston": "^3.17.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
