--- a/data/fileMapping.json
+++ b/data/fileMapping.json
@@ -2,7 +2,9 @@
   "commitlint": ["commitlint.config.js"],
   "editorconfig": [".editorconfig"],
   "eslint": ["eslint.config.js"],
-  "lint-staged": ["eslint.config.js"],
+  "lint-staged": [],
   "prettier": [".prettierrc.json"],
-  "typescript": ["tsconfig.json"]
+  "typescript": ["tsconfig.json"],
+  "jest": ["jest.config.js", "tests/sum.test.ts", "tests/sum.ts"],
+  "logger": ["logger.ts"]
 }
