--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
     "winston": "^3.17.0"
   },
   "lint-staged": {
@@ -47,6 +47,7 @@
     "fix": "eslint . --fix",
     "cli": "tsx ./src/cli.ts",
     "build": "tsc",
+    "clrtmp": "rm -r tmp",
     "test": "clear && node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
