--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "@leandrobataglia/baseconfig",
   "type": "module",
   "version": "1.1.0",
+  "imports": {
+    "#utils/*": "./dist/src/utils/*",
+    "#interfaces/*": "./dist/src/interfaces/*",
+    "#data/*": "./dist/data/*"
+  },
   "ts-node": {
     "esm": true,
     "experimentalSpecifierResolution": "node"
   },
   "bin": {
-    "baseconfig": "./dist/cli.js"
+    "baseconfig": "./src/cli.ts"
   },
   "files": [
-    "cli.js",
+    "cli.ts",
     "templates"
   ],
   "dependencies": {
@@ -21,6 +26,7 @@
     "@types/node": "^22.13.1",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
+    "ci": "^2.3.0",
     "commitlint": "^19.7.1",
     "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
@@ -32,6 +38,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
+    "semantic-release": "^24.2.2",
     "tsx": "^4.19.2",
     "winston": "^3.17.0"
   },
@@ -46,7 +53,8 @@
     "lint": "eslint .",
     "fix": "eslint . --fix",
     "cli": "tsx ./src/cli.ts",
-    "build": "tsc",
+    "dcli": "node ./dist/src/cli.js",
+    "build": "tsc && tsc-alias",
     "clrtmp": "rm -r tmp",
     "test": "clear && node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
@@ -54,6 +62,7 @@
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "jest-esm-transformer": "^1.0.0",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "tsc-alias": "^1.8.10"
   }
 }
