chore: remove dependências desnecessárias e atualiza o bin para dist

--- a/package.json
+++ b/package.json
@@ -2,44 +2,18 @@
   "name": "@leandrobataglia/baseconfig",
   "type": "module",
   "version": "1.1.0",
-  "imports": {
-    "#utils/*": "./dist/src/utils/*",
-    "#interfaces/*": "./dist/src/interfaces/*",
-    "#data/*": "./dist/data/*"
-  },
   "ts-node": {
     "esm": true,
     "experimentalSpecifierResolution": "node"
   },
   "bin": {
-    "baseconfig": "./src/cli.ts"
+    "baseconfig": ".dist//src/cli.ts"
   },
   "files": [
-    "cli.ts",
-    "templates"
+    "dist"
   ],
   "dependencies": {
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@eslint/js": "^9.19.0",
-    "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.13.1",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
-    "ci": "^2.3.0",
-    "commitlint": "^19.7.1",
     "dotenv": "^16.4.7",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "fs-extra": "^10.0.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.4.3",
-    "prettier": "^3.4.2",
-    "semantic-release": "^24.2.2",
-    "tsx": "^4.19.2",
     "winston": "^3.17.0"
   },
   "lint-staged": {
@@ -54,15 +28,34 @@
     "fix": "eslint . --fix",
     "cli": "tsx ./src/cli.ts",
     "dcli": "node ./dist/src/cli.js",
-    "build": "tsc && tsc-alias",
+    "build": "tsc",
     "clrtmp": "rm -r tmp",
     "test": "clear && node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@eslint/js": "^9.19.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.1",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "ci": "^2.3.0",
+    "commitlint": "^19.7.1",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "fs-extra": "^10.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-esm-transformer": "^1.0.0",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.4.2",
+    "semantic-release": "^24.2.2",
     "ts-jest": "^29.2.5",
-    "tsc-alias": "^1.8.10"
+    "tsx": "^4.19.2"
   }
 }
