fix(config): ajusta o caminho do bin no package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "experimentalSpecifierResolution": "node"
   },
   "bin": {
-    "baseconfig": "./dist/src/cli.ts"
+    "baseconfig": "./dist/src/cli.js"
   },
   "files": [
     "dist"
