--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   ],
   "dependencies": {
     "dotenv": "^16.4.7",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "fs-extra": "^10.0.0",
+    "@types/fs-extra": "^11.0.4"
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -36,7 +38,6 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/js": "^9.19.0",
-    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
@@ -48,7 +49,6 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "fs-extra": "^10.0.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-esm-transformer": "^1.0.0",
