--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "baseconfig": "./dist/src/cli.js"
   },
   "files": [
-    "dist"
+    "dist",
+    ".env"
   ],
   "dependencies": {
     "dotenv": "^16.4.7",
