fix(templates): adiciona "dist/templates/.husky/_/.gitignore" explicitamente no package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "files": [
     "dist",
-    "dist/templates/.husky/_"
+    "dist/templates/.husky/_",
+    "dist/templates/.husky/_/.gitignore"
   ],
   "dependencies": {
     "dotenv": "^16.4.7",
