--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "dist/templates/.husky/_"
   ],
   "dependencies": {
+    "@types/fs-extra": "^11.0.4",
     "dotenv": "^16.4.7",
-    "winston": "^3.17.0",
     "fs-extra": "^10.0.0",
-    "@types/fs-extra": "^11.0.4"
+    "winston": "^3.17.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -31,7 +31,7 @@
     "fix": "eslint . --fix",
     "cli": "tsx ./src/cli.ts",
     "dcli": "node ./dist/src/cli.js",
-    "build": "tsc",
+    "build": "tsc --noEmit && vite build",
     "clrtmp": "rm -r tmp",
     "test": "clear && node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
@@ -57,6 +57,7 @@
     "prettier": "^3.4.2",
     "semantic-release": "^24.2.2",
     "ts-jest": "^29.2.5",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "vite": "^6.1.1"
   }
 }
