--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,9 @@
     "outDir": "./dist",
     "esModuleInterop": true,
     "target": "ESNext",
-    "types": ["node"], // Adicione esta linha
-    "typeRoots": ["./node_modules/@types"] // Adicione esta linha
+    "types": ["node"],
+    "typeRoots": ["./node_modules/@types"]
   },
-  "include": ["src/**/*", "eslint.config.js", "logger.ts", "tests/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*", "eslint.config.js", "logger.ts", "tests/**/*", "vite.config.ts"],
+  "exclude": ["node_modules", "dist", "public"]
 }
