--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "experimentalSpecifierResolution": "node"
   },
   "bin": {
-    "baseconfig": "./dist/src/cli.js"
+    "baseconfig": "./dist/cli.es.js"
   },
   "files": [
-    "dist",
-    "dist/templates/.husky/_"
+    "dist/",
+    "templates/",
+    "data/",
+    ".env"
   ],
   "dependencies": {
+    "@rollup/plugin-replace": "^6.0.2",
     "@types/fs-extra": "^11.0.4",
     "dotenv": "^16.4.7",
     "fs-extra": "^10.0.0",
@@ -30,8 +33,8 @@
     "lint": "eslint .",
     "fix": "eslint . --fix",
     "cli": "tsx ./src/cli.ts",
-    "dcli": "node ./dist/src/cli.js",
-    "build": "tsc --noEmit && vite build",
+    "dist": "node ./dist/cli.es.js",
+    "build": "tsc --noEmit && rollup -c && tsx ./addShebang.ts",
     "clrtmp": "rm -r tmp",
     "test": "clear && node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
@@ -39,6 +42,10 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/js": "^9.19.0",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
@@ -55,9 +62,13 @@
     "jest-esm-transformer": "^1.0.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
+    "rollup": "^4.34.8",
+    "rollup-plugin-add-shebang": "^0.3.1",
     "semantic-release": "^24.2.2",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
-    "vite": "^6.1.1"
+    "vite": "^6.1.1",
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
