refactor: separa comando setupTool do cli e insere na pasta commands

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     },
     "rootDir": ".",
     "outDir": "./dist",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "target": "ESNext",
     "types": ["node", "jest"],
