--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prepare": "husky install",
     "lint": "eslint .",
     "fix": "eslint . --fix",
-    "cli": "tsx ./src/cli.ts",
+    "cli": "export NODE_ENV=development && tsx ./src/cli.ts",
     "dist": "node ./dist/cli.es.js",
     "build": "tsc --noEmit && rollup -c && tsx ./addShebang.ts",
     "clrtmp": "rm -r tmp",
