--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@leandrobataglia/baseconfig",
   "type": "module",
   "version": "1.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eRRe-i/baseconfig.git"
+  },
   "ts-node": {
     "esm": true,
     "experimentalSpecifierResolution": "node"
