--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,10 +2,10 @@ name: CI/CD Pipeline
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened] # Executa em PRs abertos, atualizados ou reabertos
-    branches: [develop] # Apenas para o branch develop
+    types: [opened, synchronize, reopened]
+    branches: [develop]
   push:
-    branches: [develop, main, beta] # Executa em pushes diretos nas branches develop, main e beta
+    branches: [develop, main, beta]
 
 permissions:
   contents: write
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Garante que todos os commits sejam buscados
+          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
@@ -40,10 +40,12 @@ jobs:
         run: npx eslint .
 
   release:
-    needs: lint-and-validate # Garante que o linting passe antes de prosseguir com a release
+    needs: lint-and-validate
     if: |
-      (github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop') ||
-      (github.event_name == 'push' && github.ref == 'refs/heads/develop')
+      github.event_name == 'push' &&
+      (github.ref == 'refs/heads/main' ||
+       github.ref == 'refs/heads/beta' ||
+       github.ref == 'refs/heads/develop')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -57,24 +59,19 @@ jobs:
         with:
           node-version: 'lts/*'
           cache: 'npm'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install Dependencies
         run: npm ci
 
-      - name: Generate Timestamp Version
-        id: timestamp_version
-        run: |
-          TIMESTAMP=$(date -u +"%Y%m%d%H%M%S") # Gera um timestamp no formato YYYYMMDDHHMMSS
-          echo "TIMESTAMP_VERSION=$TIMESTAMP" >> $GITHUB_ENV
-
-      - name: Prepare Semantic Release
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git commit --allow-empty -m "chore: generate next build with timestamp ${{ env.TIMESTAMP_VERSION }}" || true
+      - name: Generate Timestamp
+        if: github.ref == 'refs/heads/develop'
+        id: timestamp
+        run: echo "TIMESTAMP=$(date -u +%Y%m%d%H%M%S)" >> $GITHUB_ENV
 
       - name: Run Semantic Release
-        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          TIMESTAMP: ${{ env.TIMESTAMP }}
+        run: npx semantic-release
