--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "https://github.com/eRRe-i/baseconfig.git"
   },
+  "test": "test",
   "ts-node": {
     "esm": true,
     "experimentalSpecifierResolution": "node"
